--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <nav>
     <div class="navbar">
 
+    <a href="index.html">Guitar Kings</a>
     <a href="index.html">Home</a>
     <a href="#">Guitars</a>
     <a href="#">Contacts</a>
@@ -17,6 +18,25 @@
 
 <h1>Authentic Handmade Guitars</h1>
 <a>View Guitars</a>
+<h2>Our Guitars Are</h2>
+<ul>
+    <li>Made with real Prennsylvanian wood</li>
+
+    <li>Crafted by a family-run business</li>
+
+    <li>Built to last a life time</li>
+    <li>Beautiful unique sound</li>
+    <li> Options for all music lovers</li>
+</ul>
+<p>Hands strumming guitar</p>
+<h2>Reviews</h2>
+<div>
+<p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>>
+<img src="#" alt="Profile pic of Bob Willis">
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+<img src="#" alt="Profile pic of Sally Oldfield">
+</div>
+<h2>View Our Guitars</h2>
 
 </body>
 </html>
