--- a/index.html
+++ b/index.html
@@ -1,42 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <meta charset="UTF-8" lang="en">
-    <title><a href="index.html">Guitar Kings</a></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Guitar Kings</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
-<nav>
-    <div class="navbar">
-
-    <a href="index.html">Guitar Kings</a>
-    <a href="index.html">Home</a>
-    <a href="#">Guitars</a>
-    <a href="#">Contacts</a>
-    </div>
-</nav>
+    
 </head>
+
 <body>
+<header>
+    <a href="index.html">Guitar Kings</a>
+    <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Guitars</a></li>
+        <li><a href="#">Contacts</a></li>  
+    </ul>    
+    </nav>
+</header>
 
-<h1>Authentic Handmade Guitars</h1>
-<a>View Guitars</a>
-<h2>Our Guitars Are</h2>
-<ul>
-    <li>Made with real Prennsylvanian wood</li>
+<main>
 
-    <li>Crafted by a family-run business</li>
+    <h1>Authentic Handmade Guitars</h1>
+    <a href="#">View Guitars</a>
+    <h2>Our Guitars Are</h2>
 
-    <li>Built to last a life time</li>
-    <li>Beautiful unique sound</li>
-    <li> Options for all music lovers</li>
-</ul>
+        <ul>
+            <li>Made with real Prennsylvanian wood</li>
+            <li>Crafted by a family-run business</li>
+            <li>Built to last a life time</li>
+            <li>Beautiful unique sound</li>
+            <li> Options for all music lovers</li>
+        </ul>
+
 <p>Hands strumming guitar</p>
 <h2>Reviews</h2>
+
 <div>
 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>>
 <img src="#" alt="Profile pic of Bob Willis">
+</div>
+
+<div>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 <img src="#" alt="Profile pic of Sally Oldfield">
 </div>
+
 <h2>View Our Guitars</h2>
 
+<div class="guitars">
+
+    <p>Adirondack Red</p>
+    <h3>Adirondack Red</h3>
+    <p>$500</p>
+    <a href="#">View</a>
+
+</div>
+<div class="guitars">
+
+    <p>Adirondack Red</p>
+    <h3>Adirondack Red</h3>
+    <p>$500</p>
+    <a href="#">View</a>
+
+</div>
+</main>
+<footer>Copyright &copy; </footer>
 </body>
 </html>
