added product pages and images

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Guitars</a></li>
-        <li><a href="#">Contacts</a></li>  
+        <li><a href="guitars.html">Guitars</a></li>
+        <li><a href="contact.html">Contacts</a></li>  
     </ul>    
     </nav>
 </header>
@@ -24,7 +24,7 @@
 <main>
 
     <h1>Authentic Handmade Guitars</h1>
-    <a href="#">View Guitars</a>
+    <a href="guitars.html">View Guitars</a>
     <h2>Our Guitars Are</h2>
 
         <ul>
@@ -55,7 +55,7 @@
     <p>Adirondack Red</p>
     <h3>Adirondack Red</h3>
     <p>$500</p>
-    <a href="#">View</a>
+    <a href="products/adirondack-red.html">View</a>
 
 </div>
 <div class="guitars">
@@ -63,7 +63,7 @@
     <p>Adirondack Red</p>
     <h3>Adirondack Red</h3>
     <p>$500</p>
-    <a href="#">View</a>
+    <a href="products/adirondack-red.html">View</a>
 
 </div>
 </main>
