--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Guitars</a></li>
-        <li><a href="#">Contacts</a></li>  
+        <li><a href="#">Contact</a></li>  
     </ul>    
     </nav>
 </header>
