--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Guitars</a></li>
-        <li><a href="#">Contacts</a></li>  
+        <li><a href="#">Contact</a></li>  
     </ul>    
     </nav>
 </header>
@@ -25,7 +25,7 @@
 
    <div>
        <h1>Adirondack Red</h1>
-      <img src="images/product-specific.jpg" alt="product-specific">
+      <img src="/images/product-specific.jpg" alt="product-specific">
 
    </div>
 
