--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -15,8 +15,8 @@
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Guitars</a></li>
-        <li><a href="#">Contact</a></li>  
+        <li><a href="guitars.html">Guitars</a></li>
+        <li><a href="contact">Contact</a></li>  
     </ul>    
     </nav>
 </header>
