--- a/guitars.html
+++ b/guitars.html
@@ -4,14 +4,14 @@
 
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guitar Kings</title>
+    <title>Guitar Kings | Guitars</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     
 </head>
 
 <body>
 <header>
-    <a href="index.html">Guitar Kings</a>
+    <a href="index.html">Guitar Kings </a>
     <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -27,13 +27,15 @@
 <div>
 
     <img src="/images/product.jpg" alt="product">
-    <p>Adirondack Red</p>
+    <h2>Adirondack Red</h2>
+    <p>500$</p>
     <a href="/products/adirondack-red.html">View</a>
 </div>
 <div>
 
     <img src="/images/product.jpg" alt="product">
-    <p>Adirondack Red</p>
+    <h2>Adirondack Red<h2>
+    <p>500$</p>
     <a href="/products/adirondack-red.html">View</a>
 </div>
 
