--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guitar Kings</title>
+    <title>Guitar Kings | Home</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     
 </head>
@@ -36,16 +36,17 @@
         </ul>
 
 <p>Hands strumming guitar</p>
+<img src="/images/home-info.jpg" alt="guitar">
 <h2>Reviews</h2>
 
 <div>
 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>>
-<img src="#" alt="Profile pic of Bob Willis">
+<img src="images/review-bio.jpg" alt="Profile pic of Bob Willis">
 </div>
 
 <div>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-<img src="#" alt="Profile pic of Sally Oldfield">
+<img src="images/review-bio2.jpg" alt="Profile pic of Sally Oldfield">
 </div>
 
 <h2>View Our Guitars</h2>
