--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guitar Kings</title>
+    <title>Guitar Kings | Adirondack Red</title>
     <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     
 </head>
@@ -24,9 +24,11 @@
 <main>
 
    <div>
-       <h1>Adirondack Red</h1>
+    <h1>Adirondack Red</h1>
       <img src="/images/product-specific.jpg" alt="product-specific">
-
+      <img src="/images/product.jpg" alt="product">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab voluptas minima aliquam et asperiores tenetur, ipsum, aut animi doloremque vel numquam incidunt vitae veritatis quidem quia maxime sit? Ipsa, sit!</p>
+      <p> 500$</p>
    </div>
 
 </main>
